--- a/log.html
+++ b/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17482],[],[[4,0,5,[6],[1,693,16784],[[0,7,8,0,9,10,0,0,[1,696,16492],[[699,2,11]]],[0,12,8,0,13,0,0,0,[1,17196,279],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10100],[],[[4,0,0,[],[1,631,9469],[[0,5,6,0,7,8,0,0,[1,632,9284],[[632,2,9]]],[0,10,6,0,11,0,0,0,[1,9917,181],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Sfsd","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/.venv/sfsd.robot","*.venv/sfsd.robot","*loginpage","*<p>Google test\x3c/p>","*reggression","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.guru99.com/\">https://www.guru99.com/\x3c/a>    Chrome","*Opening browser 'Chrome' to base url '<a href=\"https://www.guru99.com/\">https://www.guru99.com/\x3c/a>'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tc","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/tc.robot","*robot/tc.robot","*OpenWebsite","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","eNqzSVTIKEpNs1XKKCkpKLbS1y/KT8ovSStKzE0tzy/K1ssvStcPTs1JzcsszfXJTCpKLKpE5+tllOTmKPsXpOapGhk4FeWXF6cWKdlR1zwb/UQ7BSBIzijKz00FAAIsQrI=","eNqtzbEKwjAQh/FXOSqSLRFHqR2chQ4+wUWuTTHplX+uFN/egpuz47f8vn6ReZpHitCtCsg9E7SII1OKXIVWZHItU4IM1yaZLfUSAjSqDeAim+LlFWN4SN6ptdynCMb7t32ykg/9vjueT7fvren+67WBO+c/DWlNYQ==","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:17","fail":0,"label":"reggression","pass":1,"skip":0}],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Sfsd","name":"Sfsd","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Tc","name":"Tc","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722114870757;
+window.output["baseMillis"] = 1722887505077;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17508;
+window.output["generated"] = 10109;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
