--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17482],[],[[4,0,5,[6],[1,693,16784],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10100],[],[[4,0,0,[],[1,631,9469],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Sfsd","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/.venv/sfsd.robot","*.venv/sfsd.robot","*loginpage","*<p>Google test\x3c/p>","*reggression"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tc","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/tc.robot","*robot/tc.robot","*OpenWebsite"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:17","fail":0,"label":"reggression","pass":1,"skip":0}],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Sfsd","name":"Sfsd","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Tc","name":"Tc","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722114870757;
+window.output["baseMillis"] = 1722887505077;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17508;
+window.output["generated"] = 10109;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
