--- a/log.html
+++ b/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10100],[],[[4,0,0,[],[1,631,9469],[[0,5,6,0,7,8,0,0,[1,632,9284],[[632,2,9]]],[0,10,6,0,11,0,0,0,[1,9917,181],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17872],[],[[4,0,0,[],[1,181,17690],[[0,5,6,0,7,8,0,0,[1,182,9633],[[183,2,9]]],[0,10,6,0,11,0,0,0,[1,9816,436],[]],[0,12,6,0,13,14,0,0,[1,10252,23],[[10275,2,15]]],[0,16,17,0,18,19,20,0,[1,10276,0],[[10277,2,21]]],[0,22,6,0,23,20,0,0,[1,10277,32],[[10309,2,24]]],[0,25,6,0,26,20,0,0,[1,10310,32],[]],[0,27,6,0,28,29,0,0,[1,10342,230],[[10343,2,30]]],[0,31,17,0,32,33,0,0,[1,10573,5003],[[15576,2,34]]],[0,35,6,0,36,20,0,0,[1,15577,55],[]],[0,31,17,0,32,37,0,0,[1,15633,2001],[[17633,2,38]]],[0,39,6,0,40,0,0,0,[1,17634,236],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tc","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/tc.robot","*robot/tc.robot","*OpenWebsite","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","eNqzSVTIKEpNs1XKKCkpKLbS1y/KT8ovSStKzE0tzy/K1ssvStcPTs1JzcsszfXJTCpKLKpE5+tllOTmKPsXpOapGhk4FeWXF6cWKdlR1zwb/UQ7BSBIzijKz00FAAIsQrI=","eNqtzbEKwjAQh/FXOSqSLRFHqR2chQ4+wUWuTTHplX+uFN/egpuz47f8vn6ReZpHitCtCsg9E7SII1OKXIVWZHItU4IM1yaZLfUSAjSqDeAim+LlFWN4SN6ptdynCMb7t32ykg/9vjueT7fvren+67WBO+c/DWlNYQ==","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Inputbox","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/inputbox.robot","*robot/inputbox.robot","*testingInputbox","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.nseindia.com/\">https://www.nseindia.com/\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.nseindia.com/\">https://www.nseindia.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp; Updates, Quotes- Nseindia.com","*Page title is 'NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp; Updates, Quotes- Nseindia.com'.","*Set Variable","*BuiltIn","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*id:header-search-input","*${\"search_text\"}","*${\"search_text\"} = id:header-search-input","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*Element 'id:header-search-input' is displayed.","*Element Should Be Enabled","*<p>Verifies that element identified by <code>locator\x3c/code> is enabled.\x3c/p>","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${\"search_text\"}    tata Chemical","*Typing text 'tata Chemical' into text field 'id:header-search-input'.","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Slept 5 seconds.","*Clear Element Text","*<p>Clears the value of the text-input-element identified by <code>locator\x3c/code>.\x3c/p>","*2","*Slept 2 seconds.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Tc","name":"Tc","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Inputbox","name":"Inputbox","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722887505077;
+window.output["baseMillis"] = 1722893738397;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10109;
+window.output["generated"] = 17885;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
