--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10100],[],[[4,0,0,[],[1,631,9469],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17872],[],[[4,0,0,[],[1,181,17690],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tc","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/tc.robot","*robot/tc.robot","*OpenWebsite"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Inputbox","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/inputbox.robot","*robot/inputbox.robot","*testingInputbox"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"Tc","name":"Tc","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Inputbox","name":"Inputbox","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722887505077;
+window.output["baseMillis"] = 1722893738397;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10109;
+window.output["generated"] = 17885;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
