--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17872],[],[[4,0,0,[],[1,181,17690],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,38711],[],[[4,0,0,[],[1,537,38173],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Inputbox","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/inputbox.robot","*robot/inputbox.robot","*testingInputbox"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Radiobutton","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/radiobutton.robot","*robot/radiobutton.robot","*testing radiobutton"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Inputbox","name":"Inputbox","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:39","fail":0,"id":"s1","label":"Radiobutton","name":"Radiobutton","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722893738397;
+window.output["baseMillis"] = 1723154587224;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17885;
+window.output["generated"] = 38723;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
