--- a/log.html
+++ b/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,17872],[],[[4,0,0,[],[1,181,17690],[[0,5,6,0,7,8,0,0,[1,182,9633],[[183,2,9]]],[0,10,6,0,11,0,0,0,[1,9816,436],[]],[0,12,6,0,13,14,0,0,[1,10252,23],[[10275,2,15]]],[0,16,17,0,18,19,20,0,[1,10276,0],[[10277,2,21]]],[0,22,6,0,23,20,0,0,[1,10277,32],[[10309,2,24]]],[0,25,6,0,26,20,0,0,[1,10310,32],[]],[0,27,6,0,28,29,0,0,[1,10342,230],[[10343,2,30]]],[0,31,17,0,32,33,0,0,[1,10573,5003],[[15576,2,34]]],[0,35,6,0,36,20,0,0,[1,15577,55],[]],[0,31,17,0,32,37,0,0,[1,15633,2001],[[17633,2,38]]],[0,39,6,0,40,0,0,0,[1,17634,236],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,38711],[],[[4,0,0,[],[1,537,38173],[[0,5,6,0,7,8,0,0,[1,539,3560],[[539,2,9]]],[0,10,6,0,11,0,0,0,[1,4100,359],[]],[0,12,6,0,13,14,0,0,[1,4462,2],[]],[0,15,6,0,16,17,0,0,[1,4465,2073],[[4465,2,18]]],[0,19,6,0,20,21,0,0,[1,6539,3361],[[6540,2,22]]],[0,23,6,0,24,25,0,0,[1,9901,4114],[[9902,2,26]]],[0,23,6,0,24,27,0,0,[1,14015,4117],[[14016,2,28]]],[0,23,6,0,24,29,0,0,[1,18134,4098],[[18135,2,30]]],[0,23,6,0,24,31,0,0,[1,22232,4099],[[22233,2,32]]],[0,33,6,0,34,25,0,0,[1,26331,4090],[[26332,2,35]]],[0,33,6,0,34,36,0,0,[1,30422,4180],[[30423,2,37]]],[0,23,6,0,24,25,0,0,[1,34603,4107],[[34603,2,26]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Inputbox","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/inputbox.robot","*robot/inputbox.robot","*testingInputbox","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.nseindia.com/\">https://www.nseindia.com/\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.nseindia.com/\">https://www.nseindia.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Title Should Be","*<p>Verifies that the current page title equals <code>title\x3c/code>.\x3c/p>","*NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp; Updates, Quotes- Nseindia.com","*Page title is 'NSE - National Stock Exchange of India Ltd: Live Share/Stock Market News &amp; Updates, Quotes- Nseindia.com'.","*Set Variable","*BuiltIn","*<p>Returns the given values which can then be assigned to a variables.\x3c/p>","*id:header-search-input","*${\"search_text\"}","*${\"search_text\"} = id:header-search-input","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*Element 'id:header-search-input' is displayed.","*Element Should Be Enabled","*<p>Verifies that element identified by <code>locator\x3c/code> is enabled.\x3c/p>","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${\"search_text\"}    tata Chemical","*Typing text 'tata Chemical' into text field 'id:header-search-input'.","*Sleep","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Slept 5 seconds.","*Clear Element Text","*<p>Clears the value of the text-input-element identified by <code>locator\x3c/code>.\x3c/p>","*2","*Slept 2 seconds.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Radiobutton","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/radiobutton.robot","*robot/radiobutton.robot","*testing radiobutton","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"http://test.rubywatir.com/radios.php\">http://test.rubywatir.com/radios.php\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"http://test.rubywatir.com/radios.php\">http://test.rubywatir.com/radios.php\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Speed","*<p>Sets the delay that is waited after each Selenium command.\x3c/p>","*1seconds","*Select Radio Button","*<p>Sets the radio button group <code>group_name\x3c/code> to <code>value\x3c/code>.\x3c/p>","*likeit    Radio1","*Selecting 'Radio1' from radio button 'likeit'.","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*Checkboxes","*Clicking link 'Checkboxes'.","*Unselect Checkbox","*<p>Removes the selection of checkbox identified by <code>locator\x3c/code>.\x3c/p>","*soccer","*Unselecting checkbox 'soccer'.","*basketball","*Unselecting checkbox 'basketball'.","*golf","*Unselecting checkbox 'golf'.","*netball","*Unselecting checkbox 'netball'.","*Select Checkbox","*<p>Selects the checkbox identified by <code>locator\x3c/code>.\x3c/p>","*Selecting checkbox 'soccer'.","*baseball","*Selecting checkbox 'baseball'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Inputbox","name":"Inputbox","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:39","fail":0,"id":"s1","label":"Radiobutton","name":"Radiobutton","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722893738397;
+window.output["baseMillis"] = 1723154587224;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 17885;
+window.output["generated"] = 38723;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
