--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,38711],[],[[4,0,0,[],[1,537,38173],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,22060],[],[[4,0,0,[],[1,547,5317],[]],[5,0,0,[],[1,5865,16194],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Radiobutton","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/robot/radiobutton.robot","*robot/radiobutton.robot","*testing radiobutton"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Resource","*/Users/ranvirkumarsharma/PycharmProjects/robotframework/impresources/resource.robot","*impresources/resource.robot","*find link available on page","*select the drop down"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:39","fail":0,"id":"s1","label":"Radiobutton","name":"Radiobutton","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Resource","name":"Resource","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723154587224;
+window.output["baseMillis"] = 1728077799163;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 38723;
+window.output["generated"] = 22068;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
